# docquery-flagsmith

./: README.md
docquery-backend/: .env.example  README.md  packages.txt  pyproject.toml
docquery-backend/app/: main.py
docquery-backend/app/agents/ingestion/: agent.py  nodes.py  state.py
docquery-backend/app/agents/qa/: agent.py  nodes.py  state.py
docquery-backend/app/agents/utils/: database.py  models.py
docquery-frontend/: .env.example  README.md  next-auth.d.ts  package-lock.json  package.json
docquery-frontend/prisma/: schema.prisma
docquery-frontend/src/: auth.ts
docquery-frontend/src/app/: globals.css  layout.tsx  page.tsx
docquery-frontend/src/app/d/: layout.tsx
docquery-frontend/src/app/signin/: page.tsx
docquery-frontend/src/components/: github-card.tsx  github-repo-card.tsx  github-repo-files.tsx  github-repo-info.tsx  ingestion-progess.tsx  not-found.tsx  repo-details.tsx  repo-form.tsx  sign-in.tsx  sign-out.tsx  unauthorized.tsx
docquery-frontend/src/components/admin/: repository-list.tsx
docquery-frontend/src/components/chat-ui/: assistant-message.tsx  chat-input.tsx  chat-interface.tsx  user-message.tsx
docquery-frontend/src/components/dashboard/: header.tsx
docquery-frontend/src/components/flagsmith/: flagsmith-server.ts  flagsmith-wrapper.tsx
docquery-frontend/src/components/landing-page-components/: benefits.tsx  cta.tsx  features.tsx  header.tsx  hero.tsx  tech-stack.tsx
docquery-frontend/src/hooks/: use-toast.ts  useRepoDetails.ts
docquery-frontend/src/lib/: fileTree.ts  types.ts
(+15 files in other folders)
