[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "Md Abid Hussain", email = "abid0hussain1733@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langgraph (>=0.2.72,<0.3.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-together (>=0.3.0,<0.4.0)",
    "langchain-mongodb (>=0.4.0,<0.5.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "langchain-google-genai (>=2.0.9,<3.0.0)",
    "copilotkit (>=0.1.39,<0.2.0)",
    "langgraph-checkpoint-postgres (>=2.0.14,<3.0.0)",
    "psycopg-pool (>=3.2.4,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[tool.poetry.scripts]
serve = "app.main:main"
